made further code changes

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <p> Our git log document will have some basic git commands</p>
   <hr>
   <p>making random change</p>
+  <p>how does this work</p>
 </body>
 </html>
