--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
   <hr>
   <p>making random change</p>
   <p>how does this work</p>
+  <ul>
+    <li>git add .: stage file</li>
+  </ul>
 </body>
 </html>
