--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <p>how does this work</p>
   <ul>
     <li>git add .: stage file</li>
+    <li>git commit: to take a snapshot of code</li>
+    <li>git status: check status of code</li>
   </ul>
 </body>
 </html>
