--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GIT LOG DOCUMENT</title>
+  <link rel="stylesheet" type="text/css" href="/main.css">
 </head>
 <body>
   <h1>Today we are making a git log document</h1>
@@ -15,6 +16,9 @@
     <li>git add .: stage file</li>
     <li>git commit: to take a snapshot of code</li>
     <li>git status: check status of code</li>
+    <li>git push -u origin main: Used to push your code to a remote server</li>
   </ul>
+  <hr>
+  
 </body>
 </html>
