--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <li>git commit: to take a snapshot of code</li>
     <li>git status: check status of code</li>
     <li>git push -u origin main: Used to push your code to a remote server</li>
+    <li>git checkout: to move to a new branch</li>
+    <li>git log: see log of all activites </li>
   </ul>
   <hr>
   
